SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/RFQ_Vendor_Item__c.object-meta.xml
<CustomObject>
    <label>RFQ Vendor Line</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFQ Vendor Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>