SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Budget_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Amount__c</fullName>
    <formula>RFQ_Item__r.Budget_Item__r.Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>