SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/CreateVendor__c.field-meta.xml
<CustomField>
    <fullName>CreateVendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateVendor</label>
    <type>Checkbox</type>
</CustomField>