SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/isVendorRFQSubmited__c.field-meta.xml
<CustomField>
    <fullName>isVendorRFQSubmited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isVendorRFQSubmited</label>
    <type>Checkbox</type>
</CustomField>