SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>RFQ_To_Vendor__c</referenceTo>
    <relationshipName>Vendor_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>