SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor_Estimated_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Estimated_Work_Days__c</fullName>
    <label>Estimated Work (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>