SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Vendor__r.Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>