SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor_Note__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Note__c</fullName>
    <label>Vendor Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>