SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>