SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Total_Price__c</fullName>
    <formula>Vendor_Quantity__c  *  Vendor_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>