SubBt/force-app/main/default/objects/RFQ_Vendor_Item__c/fields/Vendor_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>